[gd_scene load_steps=12 format=3 uid="uid://ci1j8d8nrruuc"]

[ext_resource type="Script" path="res://scenes/screens/title_screen.gd" id="1_1ls0u"]
[ext_resource type="Texture2D" uid="uid://c0dyhvwwkqn3q" path="res://assets/sprites/utils/tittle_screen.png" id="2_6l13k"]
[ext_resource type="Texture2D" uid="uid://cmd7g3csr45ot" path="res://assets/sprites/utils/tittle_screen_heart.png" id="3_3gc4u"]
[ext_resource type="AudioStream" uid="uid://decg74rjaa35e" path="res://assets/sound/music/main_theme.ogg" id="4_p20sd"]
[ext_resource type="PackedScene" uid="uid://0hhnmxxla0lt" path="res://scenes/utils/transitions.tscn" id="5_tqs7n"]
[ext_resource type="FontFile" uid="uid://brgc8ctbo381j" path="res://assets/fonts/teeny_tiny_pixels.ttf" id="6_fwssb"]
[ext_resource type="AudioStream" uid="uid://lmyj0xwo74y7" path="res://assets/sound/fx/button_pressed.wav" id="7_uwpi5"]
[ext_resource type="AudioStream" uid="uid://b62wmx6bwhpvp" path="res://assets/sound/fx/pop_up.ogg" id="8_3vrjc"]

[sub_resource type="Animation" id="Animation_7adhl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_05v0q"]
resource_name = "flash"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_glsh6"]
_data = {
"RESET": SubResource("Animation_7adhl"),
"flash": SubResource("Animation_05v0q")
}

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1ls0u")

[node name="TittleScreen" type="Sprite2D" parent="."]
position = Vector2(120, 67)
texture = ExtResource("2_6l13k")

[node name="Heart" type="Sprite2D" parent="."]
position = Vector2(120, 44)
texture = ExtResource("3_3gc4u")

[node name="TittleScreenMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_p20sd")

[node name="ColorRect" type="ColorRect" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 240.0
offset_bottom = 135.0

[node name="FlashPlayer" type="AnimationPlayer" parent="ColorRect"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_glsh6")
}

[node name="Transitions" parent="." instance=ExtResource("5_tqs7n")]
layout_mode = 1

[node name="Buttons" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 7.0
offset_top = 78.0
offset_right = 59.0
offset_bottom = 122.0

[node name="StartButton" type="HBoxContainer" parent="Buttons"]
layout_mode = 2

[node name="Selector" type="Label" parent="Buttons/StartButton"]
custom_minimum_size = Vector2(8, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.0784314, 0.105882, 0.105882, 1)
theme_override_colors/font_shadow_color = Color(0.941176, 0.964706, 0.941176, 1)
theme_override_fonts/font = ExtResource("6_fwssb")
theme_override_font_sizes/font_size = 10
text = "*"

[node name="Start" type="Label" parent="Buttons/StartButton"]
layout_mode = 2
theme_override_colors/font_color = Color(0.0784314, 0.105882, 0.105882, 1)
theme_override_colors/font_shadow_color = Color(0.941176, 0.964706, 0.941176, 1)
theme_override_constants/shadow_outline_size = 1
theme_override_fonts/font = ExtResource("6_fwssb")
theme_override_font_sizes/font_size = 10
text = "Start
"

[node name="ExitButton" type="HBoxContainer" parent="Buttons"]
layout_mode = 2

[node name="Selector" type="Label" parent="Buttons/ExitButton"]
custom_minimum_size = Vector2(8, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.0784314, 0.105882, 0.105882, 1)
theme_override_colors/font_shadow_color = Color(0.941176, 0.964706, 0.941176, 1)
theme_override_fonts/font = ExtResource("6_fwssb")
theme_override_font_sizes/font_size = 10
text = "*"

[node name="Exit" type="Label" parent="Buttons/ExitButton"]
layout_mode = 2
theme_override_colors/font_color = Color(0.0784314, 0.105882, 0.105882, 1)
theme_override_colors/font_shadow_color = Color(0.941176, 0.964706, 0.941176, 1)
theme_override_constants/shadow_outline_size = 1
theme_override_fonts/font = ExtResource("6_fwssb")
theme_override_font_sizes/font_size = 10
text = "Exit
"

[node name="PlayButtonPressed" type="AudioStreamPlayer2D" parent="."]
position = Vector2(17, 92)
stream = ExtResource("7_uwpi5")
volume_db = 13.752

[node name="ExitButtonPressed" type="AudioStreamPlayer2D" parent="."]
position = Vector2(17, 103)
stream = ExtResource("7_uwpi5")
volume_db = 12.75

[node name="ChangeButton" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_3vrjc")
volume_db = -5.956

[connection signal="finished" from="TittleScreenMusic" to="." method="_on_tittle_screen_music_finished"]
[connection signal="finished" from="PlayButtonPressed" to="." method="_on_play_button_pressed_finished"]
[connection signal="finished" from="ExitButtonPressed" to="." method="_on_exit_button_pressed_finished"]
